<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_meal"
            android:icon="@drawable/ic_meal"
            android:title="@string/home_btn_meal_plain"/>
        <item android:id="@+id/nav_blood_sugar"
            android:icon="@drawable/ic_blood_sugar"
            android:title="@string/home_btn_blood_sugar_plain"/>
        <item android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/home_btn_calendar_plain"/>
        <item android:id="@+id/nav_report"
            android:icon="@drawable/ic_report"
            android:title="@string/home_btn_report_plain"/>
        <item android:id="@+id/nav_doctor"
            android:icon="@drawable/ic_doctor"
            android:title="@string/home_btn_doctor_plain"/>
        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/home_btn_settings_plain"/>
    </group>
</menu>